--- a/hunting-coder/styles/Home.module.css
+++ b/hunting-coder/styles/Home.module.css
@@ -2,16 +2,6 @@
   padding: 0 2rem;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 2rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .footer {
   display: flex;
   flex: 1;
@@ -51,7 +41,6 @@
 }
 
 .description {
-  margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -125,4 +114,18 @@
   margin: 0px 24px;
   list-style-type: none;
   font-weight: bold;
+}
+
+.myImg {
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.main {
+  min-height: 100vh;
+  padding: 2rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
